// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "scalapb/scalapb.proto";

// catch-up configuration parameters
message CatchUpConfig {
  uint32 catchup_interval_skip = 1;
  uint32 nr_intervals_to_trigger_catchup = 2;
}

message StaticDomainParameters {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  bool unique_contract_keys = 1;
  repeated com.digitalasset.canton.crypto.v0.SigningKeyScheme required_signing_key_schemes = 2;
  repeated com.digitalasset.canton.crypto.v0.EncryptionKeyScheme required_encryption_key_schemes = 3;
  repeated com.digitalasset.canton.crypto.v0.SymmetricKeyScheme required_symmetric_key_schemes = 4;
  repeated com.digitalasset.canton.crypto.v0.HashAlgorithm required_hash_algorithms = 5;
  repeated com.digitalasset.canton.crypto.v0.CryptoKeyFormat required_crypto_key_formats = 6;
  int32 protocol_version = 7;
  CatchUpConfig catch_up_parameters = 8;
}
